<resources>
    <string name="app_name">In And Out</string>
    <string name="order_title">Place an Order</string>
    <string name="double_double">Double Double $3.60</string>
    <string name="cheeseburger">Cheeseburger $2.15</string>
    <string name="french_fries">French Fries $1.65</string>
    <string name="shakes">Shakes $2.20</string>
    <string name="fountain_drinks">Fountain Drinks (pick size)</string>
    <string name="small">Small $1.45</string>
    <string name="medium">Medium $1.55</string>
    <string name="large">Large $1.75</string>
    <string name="place_order">Place Order</string>
    <string name="order_total">Order Total $</string>
    <string name="items_ordered">Items Ordered: </string>
    <string name="subtotal">Subtotal: $</string>
    <string name="tax">Tax (8%): $</string>
    <string name="new_order">Start New Order</string>
</resources>
